k8s/base-int/structs/hubble-ui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: cilium
    role.kubernetes.io/networking: "1"
  name: hubble-metrics
  namespace: kube-system
spec:
  ports:
  - name: metrics
    port: 9091
    protocol: TCP
    targetPort: 9091
  selector:
    k8s-app: cilium
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 80
    targetPort: 12000
  selector:
    k8s-app: hubble-ui
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: hubble-ui
  template:
    metadata:
      labels:
        k8s-app: hubble-ui
    spec:
      containers:
      - env:
        - name: NODE_ENV
          value: production
        - name: LOG_LEVEL
          value: info
        - name: HUBBLE
          value: "true"
        - name: HUBBLE_SERVICE
          value: hubble-relay
        - name: HUBBLE_PORT
          value: "80"
        image: quay.io/cilium/hubble-ui:v0.6.1
        imagePullPolicy: IfNotPresent
        name: hubble-ui
        ports:
        - containerPort: 12000
          name: http
        resources:
          limits:
            cpu: 1000m
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 64Mi
      securityContext:
        runAsUser: 1001
      serviceAccountName: hubble-ui
