k8s/base-int/structs/auth.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oauth2-proxy
    chart: oauth2-proxy-2.2.1
    heritage: Helm
    release: o2p
  name: o2p-oauth2-proxy
  namespace: auth
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: oauth2-proxy
    release: o2p
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oauth2-proxy
    chart: oauth2-proxy-2.2.1
    heritage: Helm
    release: o2p
  name: o2p-oauth2-proxy
  namespace: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
      release: o2p
  template:
    metadata:
      annotations:
        checksum/config: 0d50a1f2d8305e3bd55df41008102248e2c222b4240ef97046427bd246401258
        checksum/config-emails: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/google-secret: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
        checksum/secret: e46e3dc23114c5d6e5ef26d352d93c6a0cb8f99a57977cbe3bf76a812e93c837
      labels:
        app: oauth2-proxy
        release: o2p
    spec:
      containers:
      - args:
        - --http-address=0.0.0.0:4180
        - --config=/etc/oauth2-proxy/oauth2-proxy.cfg
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.0.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /ping
            port: http
            scheme: HTTP
          initialDelaySeconds: 0
          timeoutSeconds: 1
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /ping
            port: http
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 100m
            memory: 300Mi
          requests:
            cpu: 10m
            memory: 50Mi
        volumeMounts:
        - mountPath: /etc/oauth2-proxy
          name: configmain
      tolerations: []
      volumes:
      - configMap:
          defaultMode: 420
          name: o2p-oauth2-proxy
        name: configmain
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx-external
  labels:
    app: oauth2-proxy
    chart: oauth2-proxy-2.2.1
    heritage: Helm
    release: o2p
  name: o2p-oauth2-proxy
  namespace: auth
spec:
  rules:
  - host: auth.11fs-structs.com
    http:
      paths:
      - backend:
          serviceName: o2p-oauth2-proxy
          servicePort: 80
        path: /
  tls:
  - hosts:
    - auth.11fs-structs.com
    secretName: auth-11fs-structs-tls
